# ChangeLog for dev-python/routes
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/routes/ChangeLog,v 1.26 2015/03/26 04:12:08 idella4 Exp $

*routes-2.1 (26 Mar 2015)

  26 Mar 2015; Ian Delaney <idella4@gentoo.org> +routes-2.1.ebuild,
  -routes-1.12.3-r1.ebuild, -routes-1.13-r1.ebuild:
  bump; correct and update deps, rm IUSE doc and build / install since doc build
  fails in both prior and bumped versions

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> routes-2.0.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> routes-2.0.ebuild:
  amd64 stable, bug 540290

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -routes-1.12.3.ebuild,
  -routes-1.13.ebuild:
  Remove old.

  25 Nov 2014; Pacho Ramos <pacho@gentoo.org> routes-2.0.ebuild:
  Support python 3.4

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> routes-1.12.3-r1.ebuild,
  routes-1.12.3.ebuild, routes-1.13.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> routes-1.13-r1.ebuild:
  Add support for the new PyPy slotting.

  25 Dec 2013; Mike Gilbert <floppym@gentoo.org>
  +files/routes-2.0-setup.py.patch, routes-2.0.ebuild:
  Fix unicode error in setup.py, bug 495118.

*routes-2.0 (21 Nov 2013)

  21 Nov 2013; Tim Harder <radhermit@gentoo.org> +routes-2.0.ebuild,
  +files/routes-2.0-tests-py3.patch:
  Version bump.

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> routes-1.13-r1.ebuild:
  Marked ~x64-macos, bug #487670

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> routes-1.12.3-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  10 May 2013; Patrick Lauer <patrick@gentoo.org> routes-1.13-r1.ebuild:
  Restricting pypy1.9 as webob doesn't support it

*routes-1.12.3-r1 (25 Mar 2013)

  25 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +routes-1.12.3-r1.ebuild:
  updating routes for eapi5 support

*routes-1.13-r1 (16 Feb 2013)
