@@ -3,16 +3,18 @@ Hash: SHA256
 
 AUX routes-2.0-setup.py.patch 1068 SHA256 67494c1b57466627d460d3c348ce6219eb0706542e7ef6dbdecc3b8f7db28aab SHA512 7c5f44715e332689b2f41b02e7398ec513d0e9436b3f6cf5ab17a673ac9993cec0ff5bdcaad6869a2eb66f0ba32f4b0c29936a052701cef1bf18b8be4f354a10 WHIRLPOOL c0693412d64670ba81cefbd66f373e2dc79150208f553795f0550330902485cb83724c5d2f584d806682a5dc81779058113786762e4da5be2a022d35b6266e08
 AUX routes-2.0-tests-py3.patch 2261 SHA256 9077ebe17ca7f405b806356ccea9ca2a3e83f252ec7c347563375759ee604a7c SHA512 23f49438792daf8302e77a2b2a228c06ff4ecc982580b844dbfde59492b5a1c558155fa06467158f9ac9ae357db11d8f08c154db065c1a9cb6e1443042e3f05f WHIRLPOOL 8427e7e31b308f1eb2989cf6e8b5f49b5c73628ff072c37d54310537f51d4c4a1a970a14bf68b446b72be5bbbad7a6f2c74a81afbfe84bab379bcfb375721f20
+DIST Routes-1.13.tar.gz 797539 SHA256 cc03d1a357cdb7af82e3909ee8ff93cb2b2afb48aca23bfde0117d6f49f624a7 SHA512 052b04e0ee803394ffe1675a075fb633e790fdcabf1ee012a73d0c4ef211b4d0b18be13f680537fe5f8424193245d0b4bb2d76a20b9e74707e73b25e076a9f6a WHIRLPOOL 7b83a24719ca2e051f9ba44ca712c10c2eca1590e1fc39afb731777de9c9bd73af4ef99868bf1e3dfa688ff38b9068f30311fe146973d9b55e1c61c501a08ebb
 DIST Routes-2.0.tar.gz 199195 SHA256 6e4eb6437a9def22e1344ee8f766d7795bedfe6f615d3ea138e4035d6fbd33f8 SHA512 a049efc8774ded555f597d165cc536891cf7c008a753cb0d3c44ebb5c763e117b5050c0ef68489e05f7d9bd6009250465cc56ce6954010a84ec9b3416f728e91 WHIRLPOOL b9e5e88071c32c51427cfb16ad16cdea4cdace35579b053ea4fd2e81b27858c163244fd7976e2bdf93ab79e413ba72e48b2db8fc6991a6199ef7ba56c9620e5a
 DIST Routes-2.1.tar.gz 179737 SHA256 ebf4126e244cf11414653b5ba5f27ed4abfad38b906a01e5d4c93d3ce5568ea3 SHA512 6dcea3e20d9883e29d6aea5949eef3b265094f46084234a15530c266930163918c6eb2ad00bb49cd9cbf947a0019c2d91a5455f997bc7a7e5b8c662837a728c2 WHIRLPOOL fbdb8e1a84aa2b1b8bf011aa68a31364f0fd48cabcaaf413274679f34e514283fbd8aac9497444b24f69f7d72393f38aeab5eeeb96659e3aae009ed2eebc4fbf
+EBUILD routes-1.13-r1.ebuild 1222 SHA256 92838b561fc8b0f354f651bff8776fa05bfd454a8b92506eba55353b736a713d SHA512 42deeee41e0d58da4679b9c631a6882680cd81b9d3136c22d811de2d54f892a1a0a79a897531c8e3b3964261973a4c2f5ae473b3e2366faecc8bd027f43bfc5b WHIRLPOOL b4cec5b4bcda731268c00ba829e39002b2868688c983b5b10510f21683bcdc0707dafb3f9aabf771fb7c1a491bd30790300d73e75c4da574f693f7d2e8dd4df6
 EBUILD routes-2.0.ebuild 1621 SHA256 91c8cb7d48eeacf3e990d34385fe21b4c8dad4227ab5af06810ee81bad7afbb6 SHA512 1822a0b1049a6bed3b2a2a6b52d362f416d1dce2fc894995d3a7ec3e5ae378b32534eb5266de7a599c4ddfc7134893ce11863217a946698d182882e3ad64c840 WHIRLPOOL d3f9575f07072ba8ffdb6a6de59de521b2966f48882b63230b864c3f2abe55ecef657a90b4b4149d4e55f0ddc0b648f30a316d6c1c1ea577898774b2569941a7
 EBUILD routes-2.1.ebuild 1616 SHA256 3c910d358f065ba2ea9573375ee8ccd3dbb71c96f283343e6922e095501e0ab2 SHA512 9771921b4b1c1fcd9e25c6d98d82f3d13bfa028336a4eac5fd7f70fbd028160d43cda8641aa2e58f00ae2fe31b2eecbd3b22706f59a324c516c05fe1ce887e7e WHIRLPOOL 7ae38a2ed281928cd45d3c9f1098a845e801554a73031cab7279dfaa9b93752c20ca8564cc9b2d89672a7c57c33bd709e7e80c36748fa388dd18f8b7f14565de
-MISC ChangeLog 4058 SHA256 9602c4440b67431065a36aa110f3b48b62a3e836355146a065f0a80c190bc70b SHA512 0e54bb34b0034700e5d69867524eabd526c8889fe005497a4602a315becce6b1f8944bdade5577cd7e79554ef200954b8c4cde56421e98fe429af5e2f649024e WHIRLPOOL 0f0a9e48893e14c13a98172b17874a8c64d58fe2a3748c649cd76cf7497d8b14a13c338cde6b33890946d2c41af4582db567de9ebaf045ece67071d558e81292
+MISC ChangeLog 4202 SHA256 63f2d62f97a2c42d9d778ea117defbf3b21aa5d54a9a2b4c8f57dca642f01b04 SHA512 46cc459843d64f9bbf5fb263adc70053905c9058015aa3e32364d7bba083233ad009c895adc40a18c6d15e69bc41a8eeef936148e64739d7b82e2646abf2e5c9 WHIRLPOOL 3d5a7f7aafee39351cb7d255edf8d21d86e1c00fb9985987c7efe80bb269974304780181460ed03b5af43aebe4da83bdfa5ab9fc0c837a6eac310e0490a8a433
 MISC metadata.xml 229 SHA256 dfa0cf150e448f373a15e09b7134990e29a65e6b35c53ae8773dedc89825371e SHA512 421ce7c4735ff92b9784a9b79fad6f71cf8d9bc46ae064f3b32fd85fff896781fc12fdc9a1562e28966e6e215d05ac470825748ba6905df4bd684462de9a90e6 WHIRLPOOL e284e64d0d34aac2b76e895fa25fdc20a066c58c2d59b2bd2f2062ec783622b1eca6c6ddb24ddcae157e90fcd4c7b8735be8166d03bfe49d468625eedc1915a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUTiG0ACgkQso7CE7gHKw3SfACeNe6OLCHvJH7raqG4PWnAqoiK
-0pcAoJMxT7+w/hRZ86G1ia5fF/tfRXTs
-=cd48
+iEYEAREIAAYFAlUUzwQACgkQso7CE7gHKw2EVgCfayxUznmuGw1VJb6VwZ0ve/lt
++zgAn39XL7Fo53VbwkRB7MZaL6qXNcVc
+=YtGI
 -----END PGP SIGNATURE-----
